--- a/那些年你应该挽回的那些网速.md
+++ b/那些年你应该挽回的那些网速.md
@@ -2,6 +2,15 @@
 
 ### pip
 
+修改 ~/.pip/pip.conf 文件，将以下内容添加即可。
+
+```text
+[global]
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple
+[install]
+trusted-host = https://pypi.tuna.tsinghua.edu.cn
+```
+
 ### brew
 
 经过测试，更换源后，速度大幅提升。
@@ -38,9 +47,18 @@ brew update
 brew install php@7.3
 ```
 
+### mysql
+
+疫情期间，科学上网似乎被封得很厉害，总之是完全上不了 MySQL 的官方网站，导致一些驱动根本下载不动。这边也给出一些 mysql 的镜像网站。
+
+* http://mirrors.sohu.com/mysql/
+* http://mirrors.ustc.edu.cn/mysql-ftp/Downloads/
+
 ### github
 
 ### npm
 
-### ruby
+### ruby gems
+
+### maven
 
