--- a/那些年你应该挽回的那些网速.md
+++ b/那些年你应该挽回的那些网速.md
@@ -54,11 +54,18 @@ brew install php@7.3
 * http://mirrors.sohu.com/mysql/
 * http://mirrors.ustc.edu.cn/mysql-ftp/Downloads/
 
+### rvm
+
+修改 RVM 的 Ruby 安装源到 Ruby China 的 Ruby 镜像服务器，这样能提高安装速度。
+
+```shell script
+echo "ruby_url=https://cache.ruby-china.com/pub/ruby" > ~/.rvm/user/db
+```
+
+### ruby gems
+
 ### github
 
 ### npm
 
-### ruby gems
-
 ### maven
-
